--- a/faperta/templates/indexfaperta.html
+++ b/faperta/templates/indexfaperta.html
@@ -1,10 +1,110 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+<body>
 
     <center>
         <h1>FAKULTAS PERTANIAN</h1>
+        <img src="\static\img\logo_faperta.png" height="320px">
     </center>
+</body>
+
+<body>
+    
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Sejarah</h2>
+    <p align ="justify"> Fakultas Pertanian Universitas Sultan Ageng Tirtayasa merupakan salah satu Fakultas yang ada di lingkungan Universitas Sultan Ageng Tirtayasa yang pada awalnya didirikan berdasarkan SK Ketua Yayasan Pendidikan Tirtayasa Nomor : 020/YPT/VIII/1984 tanggal 31 Agustus 1984 dengan Jurusan Sosial Ekonomi Pertanian Program Studi Sosial Ekonomi Pertanian. Sejalan dengan tuntutan masyarakat dan kebutuhan akan perlunya sarjana-sarjana pertanian bergerak dalam bidang produksi pertanian, maka Fakultas Pertanian Universitas Sultan Ageng Tirtayasa pada Tahun Akademik 2000/2001 membuka jurusan baru yaitu jurusan Agronomi jenjang S-1 dan mendapat izin menyelenggaraan berdasarkan SK Dirjen DIKTI Nomor : 046/B/T/2002, kemudian sesuai Surat Keputusan Badan Akreditasi Nasional Perguruan Tinggi, Nomor : 001/BAN-PT/Ak-XI/S1/IV/2008, tanggal 18 April 2008, tentang Hasil dan Peringkat Akreditasi Program Studi untuk Program Sarjana (S1) di Perguruan Tinggi, bagi Program Studi Agronomi sudah terakreditasidan sesuai SK BAN-PT, Nomor : 017/BAN-PT/Ak-X/S1/X/2006. Sesuai Surat Keputusan Direktur Jenderal Pendidikan Tinggi Nomor : 163/DIKTI/Kep/2007, tanggal 29 November 2007, perihal perubahan nama program studi yang disesuaikan dengan nama baru, yakni dari Jurusan/Program Studi Sosial Ekonomi Pertanian menjadi Agribisnis dan Jurusan/Program Studi Agronomi menjadi Agroekoteknologi. Pada tahun 2008, sesuai surat Direktorat Jenderal Pendidikan Tinggi Nomor : 547/D/T/2008 tanggal 5 Maret 2008 tentang ijin penyelenggaraan Jurusan/Program Studi Perikanan (S-1) pada Universitas Sultan Ageng Tirtayasa, maka Tahun Akademik 2008/2009 Fakultas Pertanian Universitas Sultan Ageng Tirtayasa membuka program studi baru yakni Program Studi Perikanan. Kehadiran program studi perikanan merupakan suatu upaya turut sertanya Fakultas Pertanian Universitas Sultan Ageng Tirtayasa dalam menunjang pembangunan nasional dan daerah terutama pengembangan sumberdaya manusia (SDM) di sektor perikanan dalam bentuk kerjasama dengan instansi pemerintah, swasta, dan Perguruan Tinggi lain. Untuk mengukuhkan posisi Fakultas Pertanian Universitas Sultan Ageng Tirtayasa sebagai satu-satunya Perguruan Tinggi Negeri di Provinsi Banten yang mengembangkan sumberdaya manusia yang kompeten dan komprehensif di bidang Ilmu Pertanian dari hulu ke hilir, di mana sebelumnya sudah berdiri Jurusan/Program Studi Agribisnis, Agroekoteknologi, dan Ilmu Perikanan, serta untuk mendukung Universitas Sultan Ageng Tirtayasa sebagai Center of Excellent for Food Security yaitu sebagai Pusat Riset Unggulan Ipteks di bidang Ketahanan Pangan (Food Security) tidak hanya di tingkat nasional tetapi juga internasional. Maka pada bulan Maret 2017 diajukanlah pendirian Program Studi Teknologi Pangan dan pada Tanggal 10 Juli 2017 Program Studi Teknologi Pangan berdiri berdasarkan Surat Keputusan Menteri Riset, Teknologi, dan Pendidikan Tinggi RI Nomor: 402/KPT/I/2017 tentang Izin Pembukaan Program Studi Teknologi Pangan Program Sarjana pada Universitas Sultan Ageng Tirtayasa tanggal 10 Juli 2017. Selanjutnya pada Tahun Akademik 2018/2019 Program Studi Teknologi Pangan mulai menerima mahasiswa baru</p>
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Visi Dan Misi</h2>
+        <h3 align ="center">Visi</h3>
+        <h3 align ="center">Pada tahun 2030 menjadi institusi pendidikan
+            tinggi pertanian yang unggul, berkarakter,
+            berdaya saing, dan berperan aktif dalam
+            pengembangan IPTEK menuju Smart and
+            Sustainable Agriculture</h3>
+        <h3 align ="center">Misi</h3>
+        <p align="center">1. Menyelenggarakan pengembangan sumberdaya
+            manusia pertanian yang unggul, berkarakter, dan
+            berdaya saing dalam penguasaan IPTEK-Smart and
+            Sustainable Agriculture</p>
+        <p align="center">2. Meningkatkan kuantitas dan kualitas penelitian dan
+            pengabdian kepada masyarakat melalui inovasi
+            IPTEK-Smart and Sustainable Agriculture untuk
+            kesejahteraan masyarakat</p>
+        <p align="center">3. Menyelenggarakan tata kelola institusi yang baik,
+            efektif, dan efisien melalui pemanfaatan teknologi
+            informasi dan komunikasi</p>
+        
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Program Studi</h2>
+    <h3>1. Agribisnis</h3>
+    <p style="font-family: 'times new roman'">{{ gbrumum }}</p>
+    <p align ="justify"> Jurusan Sosial Ekonomi Pertanian Program Studi Sosial Ekonomi Pertanian Universitas Sultan Ageng Tirtayasa memperoleh Akreditasi B berdasarkan SK BAN PT Nomor : 04421/AK/-11-033/UTS SEP/H/2000 dan di Akreditasi kembali pada tahun 2006 dengan Akreditasi B berdasarkan SK BAN PT Nomor : 09219/Ak-X-S1-017/UTSSTE/X/2006. Dan Pada Tahun 2009 Program Studi Sosial Ekonomi Pertanian berubah menjadi Jurusan/Program Studi Agribisnis, dengan Keputusan Rektor No. 181/H43/KR/SK/2009 dan diakreditasi kembali pada tahun 2012 dengan akreditasi B berdasarkan SK BAN PT Nomor: 024/BAN-PT/Ak-XV/S1/VIII/2012.</p>
+    <h3>2. Agroekoteknologi </h3>
+    <p style="font-family: 'times new roman'">{{ gbrumum }}</p>
+    <p align ="justify"> Jurusan agroekoteknologi merupakan suatu upaya turut sertanya Faperta Untirta dalam menunjang pembangunan nasional dan daerah terutama dalam pengembangan pemanfaatan dan pengelolaan sumberdaya alam (SDA) dan sumberdaya Manusia (SDM) khususnya di sektor pertanian. Upaya tersebut diwujudkan dalam bentuk kerjasama dengan instansi pemerintah, swasta, dan Perguruan Tinggi. Kondisi tersebut diharapkan dapat memberikan peluang bagi lulusan jurusan agroekoteknologi untuk berkiprah di instansi pemerintah, swasta, maupun menjadi wiraswasta.</p>
+    <h3>3. Ilmu Perikanan </h3>
+    <p style="font-family: 'times new roman'">{{ gbrumum }}</p>
+    <p align ="justify"> Prodi Perikanan merupakan salah satu Prodi yang berada di lingkungan Fakultas Pertanian (Faperta), Universitas Sultan Ageng Tirtayasa (Untirta). Pendirian Prodi Perikanan mulai direncanakan sejak tahun 2003 sebagai upaya untuk memenuhi permintaan sumberdaya manusia di sektor perikanan baik instansi pemerintah maupun swasta. Selain itu, hal lain yang mendasarinya adalah potensi kelautan dan perikanan Provinsi Banten yang prospektif untuk dikembangkan.
+        Prodi Perikanan merupakan suatu upaya turut sertanya Faperta Untirta dalam menunjang pembangunan nasional dan daerah terutama pengembangan sumberdaya manusia (SDM) di sektor perikanan. Upaya tersebut diwujudkan dalam bentuk kerjasama dengan instansi pemerintah, swasta, dan Perguruan Tinggi lain seperti Institut Pertanian Bogor, Universitas Padjajaran, Sekolah Tinggi Perikanan, dan lain-lain. Kondisi tersebut diharapkan dapat memberikan peluang bagi lulusan Prodi perikanan untuk berkiprah di instansi pemerintah, swasta, maupun menjadi wiraswasta.
+    </p>
+    <h3>4. Teknologi Pangan </h3>
+    <p style="font-family: 'times new roman'">{{ gbrumum }}</p>
+    <p align ="justify"> 
+        Fakultas Pertanian Untirta berupaya untuk mengukuhkan posisinya sebagai satu-satunya perguruan tinggi negeri di Provinsi Banten dalam mengembangkan sumber daya manusia di bidang ilmu pertanian dari hulu ke hilir secara kompeten dan komprehensif. Untuk mendukung pengembangan Untirta sebagai Center of Excellence for Food Security, maka pada bulan Maret 2017 Fakultas Pertanian Untirta mengajukan  pendirian PS Teknologi Pangan dan mendapatkan izin operasional pada tanggal 10 Juli 2017 berdasarkan SK Menteri Riset, Teknologi, dan Pendidikan Tinggi RI Nomor 402/KPT/I/2017 tentang Izin Pembukaan Program Studi Teknologi Pangan Program Sarjana pada Universitas Sultan Ageng Tirtayasa.
+        Program pengembangan di Program studi Teknologi Pangan adalah melaksanakan tridharma perguruan tinggi dan menyelenggarakan program studi yang berkualitas dalam pengembangan IPTEK pangan berbasis sumber daya lokal untuk mendukung Food Security, dengan kompetensi di bidang Kimia dan Biokimia Pangan; Mikrobiologi dan Keamanan Pangan; Rekayasa dan Pengolahan Pangan; dan Teknologi Industri Pangan
+        </p>    
+</body>
+
+<style>
+
+    body {
+      background-image: linear-gradient(to right, #2cb4b1, #224f96);
+      margin-left: 50px;
+      margin-right: 50px;
+      padding: 0;
+  }
+  
+  nav {
+      top: 0;
+      left: 0;
+      position: fixed;
+      height: 80px;
+      width: 100%;
+      box-sizing: border-box;
+      background: rgba(0, 0, 0, 0.5);
+      border-bottom: 1px solid white;
+  }
+  
+  .logo {
+      float: left;
+      height: 10px;
+      font-size: 36px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      padding: 20px 20px;
+      justify-content: space-around;
+  }
+  
+  nav ul {
+      margin: 0;
+      padding: 0;
+      float: right;
+      list-style: none;
+      display: flex;
+  }
+  
+  nav ul li a {
+      font-size:    15px;
+      font-weight: bold;
+      color: white;
+      line-height: 80px;
+      text-decoration: none;
+      padding: 12px 30px;
+  }
+  nav ul li a:hover {
+border-radius: 10px;
+background: rgba(0, 0, 0, 0.8);
+}
+</style>
     
     <h2>Daftar Prodi :</h2>
     
