--- a/feb/templates/indexfeb.html
+++ b/feb/templates/indexfeb.html
@@ -1,10 +1,82 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+<body>
 
     <center>
         <h1>FAKULTAS EKONOMI DAN BISNIS</h1>
+        <img src="\static\img\logo_feb.png" height="320px">
+        
     </center>
+</body>
+<body>
+    
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Sejarah</h2>
+    <p align ="justify"> Fakultas Ekonomi Universitas Sultan Ageng Tirtayasa (UNTIRTA) merupakan Lembaga Pendidikan Tinggi, yang pada awal pendiriannya bernaung di bawah Yayasan Pendidikan Tirtayasa (Yapenta). Yapenta sendiri merupakan yayasan yang telah berdiri pada tanggal 1 Oktober 1980, berdasarkan Akte Notaris Nomor 1 tahun 1980. Kemudian dilakukan penyempurnaan dengan pengukuhan kembali Akte Notaris Ny. R. Arie Soetardjo, Nomor 1, tanggal 3 Maret 1986. Pada tahun 1981, Yapenta mendirikan Sekolah Tinggi Ilmu Hukum (STIH) disusul pada tahun 1982 dengan pendirian Sekolah Tinggi Keguruan dan Ilmu Pendidikan (STKIP). Sementara pada waktu bersamaan Yayasan Krakatau Steel Cilegon mendirikan Sekolah Tinggi Teknik (STT). Kemudian STT di bawah Yayasan Krakatau Steel Cilegon bergabung dengan Yapenta untuk persiapan berdirinya Universitas Tirtayasa Serang Banten. Berdasarkan Surat Keputusan Menteri Pendidikan dan Kebudayaan RI Nomor: 0596/0/1984, tanggal 28 November 1984, terbentuk Universitas Tirtayasa Serang Banten yang merupakan penggabungan dari STIH, STT, dan STKIP, dan perubahan status sekolah tinggi menjadi Fakultas Hukum, Fakultas Keguruan dan Ilmu Pendidikan (FKIP) dan Fakultas Teknik.
+        Pada tanggal 22 September 2008 dengan Nomor SK: 3397D/T/2008 Fakultas Ekonomi UNTIRTA membuka Program Studi Ilmu Ekonomi Pembangunan. Pada tanggal 24 Oktober 2013, Program Studi Ilmu Ekonomi Pembangunan ditingkatkan statusnya menjadi Jurusan Ilmu Ekonomi Pembangunan. Pada tahun 2009 dan 2010, Fakultas Ekonomi UNTIRTA membuka Program Diploma, yang terdiri dari; Prodi DIII Akuntansi, Prodi DIII Marketing, Prodi DIII Keuangan dan Perbankan, serta Prodi DIII Perpajakan. Pada tahun 2015, berdasarkan Surat Keputusan Rektor No.057/UN43/KR/SK/2015, Fakultas Ekonomi UNTIRTA, berganti nama menjadi Fakultas Ekonomi dan Bisnis Universitas UNTIRTA. Pada tahun 2015, Fakultas Ekonomi UNTIRTA membuka Program Studi Ekonomi Syariah.
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Visi Dan Misi</h2>
+        <h3 align ="center">Visi</h3>
+        <h3 align ="center">Menjadi Fakultas yang Unggul dalam Bidang Ekonomi dan Bisnis di Kawasan ASEAN Tahun 2030</h3>
+        <h3 align ="center">Misi</h3>
+        <p align="center">1. Meningkatkan kualitas pengetahuan melalui pendidikan profesional dengan terus mengembangkan berbagai sumber daya pembelajaran dan relevansi untuk menghasilkan lulusan yang unggul dalam bidang Ekonomi dan Bisnis;</p>
+        <p align="center">2. Meningkatkan kualitas dan kuantitas penelitian dan pengabdian kepada masyarakat dalam bidang ekonomi dan bisnis dengan terus menciptakan suasana akademik dan lingkungan kolaboratif yang terbuka, untuk pertukaran gagasan secara bebas dan bermartabat; dan</p>
+        <p align="center">3. Meningkatkan kualitas tata kelola Fakultas yang mapan dan berkelanjutan, serta upaya membangun kemitraan dengan berbagai pihak, baik lokal, nasional dan internasional</p>
+        
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Program Studi</h2>
+    
+</body>
+
+<style>
+    body {
+      background-image: linear-gradient(to right, #2cb4b1, #224f96);
+      margin-left: 50px;
+      margin-right: 50px;
+      padding: 0;
+  }
+  
+  nav {
+      top: 0;
+      left: 0;
+      position: fixed;
+      height: 80px;
+      width: 100%;
+      box-sizing: border-box;
+      background: rgba(0, 0, 0, 0.5);
+      border-bottom: 1px solid white;
+  }
+  
+  .logo {
+      float: left;
+      height: 10px;
+      font-size: 36px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      padding: 20px 20px;
+      justify-content: space-around;
+  }
+  
+  nav ul {
+      margin: 0;
+      padding: 0;
+      float: right;
+      list-style: none;
+      display: flex;
+  }
+  
+  nav ul li a {
+      font-size: 15px;
+      font-weight: bold;
+      color: white;
+      line-height: 80px;
+      text-decoration: none;
+      padding: 12px 30px;
+  }
+  nav ul li a:hover {
+border-radius: 10px;
+background: rgba(0, 0, 0, 0.8);
+}
+</style>
     
     <h2>Daftar Prodi :</h2>
     
