--- a/fisip/templates/indexfisip.html
+++ b/fisip/templates/indexfisip.html
@@ -1,10 +1,84 @@
 {% extends 'base.html' %} 
 
 {% block content %}
-
+<body>
+    
     <center>
-        <h1>FAKULTAS ILMU SOSIAL DAN ILMU POLITIK</h1>
+        <h1>FAKULTAS ILMU SOSIAL DAN ILMU POLITIK </h1>
+        <img src="\static\img\logo_fisip.png" height="320px">
+        
     </center>
+</body>
+
+<body>
+    
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Sejarah</h2>
+    <p align ="justify"> Pada saat Universitas Sultan Ageng Tirtayasa (Untirta) sedang mempersiapkan pengalihan status negeri secara utuh dan menyeluruh dengan ditandainya pengalihan aset dan pengelolaan sumber daya dari Yayasan Pendidikan Tirtayasa kepada pemerintah yang dilaksanakan paling lama dalam kurun waktu tiga tahun. Maka pada tanggal 10 Juni 2003 dikeluarkan Surat Keputusan dari DIRJEN DIKTI DEPDIKNAS dengan nomor 1179/D/ T/2003 tentang izin operasional program studi Ilmu Administrasi Negara dan Ilmu Komunikasi, seiring dengan operasional program studi maka Fakultas Ilmu Sosial dan Ilmu Politik didirikan pada tahun akademik 2002/2003  yang mendapat legitimasi menjadi bagian dari Untirta dengan surat keputusan nomor 124/0/2004 sesuai dengan SOTK.
+
+        Pada tanggal 1 Februari 2006 telah dikeluarkan SK No. 295/D/T/2006 tentang Perpanjangan izin penyelenggaraan Program studi  Ilmu Administrasi Negara dan Ilmu Komunikasi selama 4 tahun
+        <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Visi Dan Misi</h2>
+        <h3 align ="center">Visi</h3>
+        <h3 align ="center">“Menjadikan FISIP Untirta Sebagai Pelopor Integrated, Smart and Green University yang Unggul, Berkarakter dan Berdaya Saing di kawasan ASEAN pada bidang kajian Ilmu Sosial dan Ilmu Politik 2030”</h3>
+        <h3 align ="center">Misi</h3>
+        <p align="center">1. Menyelaraskan proses pendidikan dengan sistem pembelajaran daring Indonesia dan bahan ajar berbasis riset, serta kurikulum berorientasi industri 4.0</p>
+        <p align="center">2. Membangun kemitraan strategis dengan institusi nasional dan internasional dalam kegiatan applied research dan publikasi ilmiah dengan Open Journal System dan bereputasi pada bidang Administrasi Publik, Ilmu Komunikasi, dan Ilmu Pemerintahan</p>
+        <p align="center">3. Menyelenggarakan pengabdian masyarakat sesuai bidang ilmu yang mendorong kemampuan adaptasi dan inovasi tepat guna masyarakat untuk menjawab persoalan bangsa</p>
+        <p align="center">4. Modernisasi manajemen data pendidikan, penelitian dan pengabdian masyarakat serta penunjang pelayanan kemahasiswaan berbasis digital.</p>
+
+        <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Program Studi</h2>
+</body>
+
+<style>
+    body {
+      background-image: linear-gradient(to right, #2cb4b1, #224f96);
+      margin-left: 50px;
+      margin-right: 50px;
+      padding: 0;
+  }
+  
+  nav {
+      top: 0;
+      left: 0;
+      position: fixed;
+      height: 80px;
+      width: 100%;
+      box-sizing: border-box;
+      background: rgba(0, 0, 0, 0.5);
+      border-bottom: 1px solid white;
+  }
+  
+  .logo {
+      float: left;
+      height: 10px;
+      font-size: 36px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      padding: 20px 20px;
+      justify-content: space-around;
+  }
+  
+  nav ul {
+      margin: 0;
+      padding: 0;
+      float: right;
+      list-style: none;
+      display: flex;
+  }
+  
+  nav ul li a {
+      font-size: 15px;
+      font-weight: bold;
+      color: white;
+      line-height: 80px;
+      text-decoration: none;
+      padding: 12px 30px;
+  }
+  nav ul li a:hover {
+border-radius: 10px;
+background: rgba(0, 0, 0, 0.8);
+}
+</style>
     
     <h2>Daftar Prodi :</h2>
     
