--- a/fk/templates/indexfk.html
+++ b/fk/templates/indexfk.html
@@ -1,10 +1,85 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+<body>
 
     <center>
         <h1>FAKULTAS KEDOKTERAN</h1>
+        <img src="\static\img\logo_fk.png" height="320px">
+        
     </center>
+</body>
+
+<body>
+    
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Sejarah</h2>
+    <p align ="justify">Fakultas Kedokteran UNTIRTA merupakan fakultas baru di universitas Sultan Ageng Tirtayasa yang terbentuk sejak program studi pendidikan dokter disahkan berdasarkan SK Menteri Riset Teknologi dan Pendidikan Tinggi Republik Indonesia Nomor 283/KPT/I/2019. Program studi Kedokteran Untirta saat ini dibawah pengampuan FK UI.
+        FK Untirta yang terdiri atas 5 Program Studi merupakan salah satu strategi untuk mendukung program kesehatan di Provinsi Banten.
+    </p>
+    <p align = "justify">Program Studi ini bertujuan untuk menghasilkan tenaga dokter yang kompeten di tingkat nasional dan internasional. Program studi kedokteran Untirta merupakan langkah strategis dalam memperluas peran UNTIRTA pada masalah kesehatan yang dihadapi masyarakat Indonesia pada umumnya dan masyarakat banten pada khususnya </p>
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Visi Dan Misi</h2>
+    <h3 align ="center">Visi</h3>
+    <h3 align ="center">Terwujudnya FK UNTIRTA sebagai Integrated Smart and Green (It’s Green) Faculty yang unggul, Berkarakter dan Berdaya Saing di kawasan ASEAN tahun 2030 dengan keunggulan pada bidang kesehatan kerja</h3>
+    <h3 align ="center">Misi</h3>
+    <p align="center">1. Meningkatkan kualitas, kuantitas, relevansi dan daya saing pendidikan serta lulusan yang unggul, berkarakter dan berdaya saing di kawasan ASEAN dengan keunggulan pada bidang kesehatan kerja;</p>
+    <p align="center">2. Meningkatkan kualitas dan kuantitas penelitian dan pengabdian kepada masyarakat yang inovatif berbasis kebutuhan nyata sesuai perkembangan zaman dengan keunggulan pada bidang kesehatan kerja;</p>
+    <p align="center">3. Meningkatkan daya dukung tata kelola fakultas yang baik sebagai implementasi dari Integrated Smart and Green (It’s Green) Faculty.</p>
+    <p align="center">4. Menciptakan iklim akademik yang mampu mendukung perwujudan visi Untirta Untirta;</p>
+    
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Program Studi</h2>
+</body>
+
+<style>
+    body {
+      background-image: linear-gradient(to right, #2cb4b1, #224f96);
+      margin-left: 50px;
+      margin-right: 50px;
+      padding: 0;
+  }
+  
+  nav {
+      top: 0;
+      left: 0;
+      position: fixed;
+      height: 80px;
+      width: 100%;
+      box-sizing: border-box;
+      background: rgba(0, 0, 0, 0.5);
+      border-bottom: 1px solid white;
+  }
+  
+  .logo {
+      float: left;
+      height: 10px;
+      font-size: 36px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      padding: 20px 20px;
+      justify-content: space-around;
+  }
+  
+  nav ul {
+      margin: 0;
+      padding: 0;
+      float: right;
+      list-style: none;
+      display: flex;
+  }
+  
+  nav ul li a {
+      font-size: 15px;
+      font-weight: bold;
+      color: white;
+      line-height: 80px;
+      text-decoration: none;
+      padding: 12px 30px;
+  }
+  nav ul li a:hover {
+border-radius: 10px;
+background: rgba(0, 0, 0, 0.8);
+}
+</style>
     
     <h2>Daftar Prodi :</h2>
     
