--- a/ft/templates/indexft.html
+++ b/ft/templates/indexft.html
@@ -1,10 +1,89 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+<body>
 
     <center>
         <h1>FAKULTAS TEKNIK</h1>
+        <img src="\static\img\logo_ft.png" height="320px">
+        
     </center>
+</body>
+
+<body>
+    
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Sejarah</h2>
+    <p align ="justify"> Fakultas Teknik Untirta merupakan salah satu fakultas yang menjadi cikal bakal berdirinya Untirta. Lahirnya Fakultas Teknik berawal dari gagasan jajaran direksi dan manajemen PT. Krakatau Steel (Bapak Ir. Djoko Subagyo dan Team). Fakultas Teknik terlahir sebagai wujud cita-cita masyarakat, ulama, cendekiawan dan para pemimpin se-wilayah Banten serta dengan dukungan PT. Krakatau Steel dan industri petrokimia di kawasan industri Cilegon. </p>
+    <p align ="justify"> Berdirinya Fakultas Teknik diawali dengan berdirinya Sekolah Tinggi Teknologi yang didirikan oleh PT. Krakatau Steel pada tahun 1982 dengan ijin penyelenggaraan untuk tingkat Sarjana Muda (Non Gelar) dari Kopertis Wilayah IV Jawa Barat Nomor: 040/1982. Kemudian pada tahun 1984 berdasarkan Surat Keputusan Menteri Pendidikan dan Kebudayaan RI Nomor: 0596/O/1984, Sekolah Tinggi Teknologi menggabungkan diri ke dalam Universitas Tirtayasa Banten.
+        Selanjutnya pada tanggal 13 Oktober 1999 keluar Keputusan Presiden Republik Indonesia No. 130 tentang Persiapan Pendirian Universitas Negeri Sultan Ageng Tirtayasa. Dengan keluarnya Surat Keputusan Presiden Republik Indonesia Nomor 32 tanggal 19 Maret tahun 2001 maka Universitas Sultan Ageng Tirtayasa yang menaungi Fakultas Teknik menjadi Perguruan Tinggi Negeri di lingkungan Departemen Pendidikan Nasional. Sesuai dengan peralihan status Universitas Tirtayasa (semula swasta) menjadi Universitas Sultan Ageng Tirtayasa dengan status sebagai Perguruan Tinggi Negeri (PTN) di lingkungan Depdiknas, maka pola pengelolaan kelembagaan secara otomatis mengikuti semua ketentuan dari Departemen Pendidikan Nasional.
+        Sampai saat ini, Fakultas Teknik Untirta terdiri dari 6 jurusan Strata I yaitu Teknik Mesin, Teknik Elektro, Teknik Metalurgi, Teknik Industri, Teknik Kimia dan Teknik Sipil. </p>
+    
+        <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Visi Dan Misi</h2>
+        <h3 align ="center">Visi</h3>
+        <h3 align ="center">"Terwujudnya Fakultas Teknik UNTIRTA yang UNGGUL, SMART, dan GREEN di Kawasan ASEAN Tahun 2030"</h3>
+        <h3 align ="center">Misi</h3>
+        <p align="center">1. Meningkatkan mutu, relevansi dan daya saing pendidikan serta lulusan yang kompetitif dan berdaya juang tinggi;</p>
+        <p align="center">2. Meningkatkan kualitas dan kuantitas riset dan pengabdian masyarakat yang inovatif  dan aplikatif;</p>
+        <p align="center">3. Meningkatkan daya dukung tatakelola fakultas teknik sebagai wujud fakultas yang Smart, Green dan Terintegrasi</p>
+        <h3 align ="center">Value</h3>
+        <p align="center">DINAMIS (Dayaguna, Integrasi, Nyata, Akuntabel, Mutu, Istimewa, Sinergis)</p>
+    
+        <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Program Studi</h2>
+
+
+</body>
+
+<style>
+    body {
+      background-image: linear-gradient(to right, #2cb4b1, #224f96);
+      margin-left: 50px;
+      margin-right: 50px;
+      padding: 0;
+  }
+  
+  nav {
+      top: 0;
+      left: 0;
+      position: fixed;
+      height: 80px;
+      width: 100%;
+      box-sizing: border-box;
+      background: rgba(0, 0, 0, 0.5);
+      border-bottom: 1px solid white;
+  }
+  
+  .logo {
+      float: left;
+      height: 10px;
+      font-size: 36px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      padding: 20px 20px;
+      justify-content: space-around;
+  }
+  
+  nav ul {
+      margin: 0;
+      padding: 0;
+      float: right;
+      list-style: none;
+      display: flex;
+  }
+  
+  nav ul li a {
+      font-size: 15px;
+      font-weight: bold;
+      color: white;
+      line-height: 80px;
+      text-decoration: none;
+      padding: 12px 30px;
+  }
+  nav ul li a:hover {
+border-radius: 10px;
+background: rgba(0, 0, 0, 0.8);
+}
+</style>
     
     <h2>Daftar Prodi :</h2>
     
