--- a/pascasarjana/templates/indexpascasarjana.html
+++ b/pascasarjana/templates/indexpascasarjana.html
@@ -1,10 +1,85 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+<body>
 
     <center>
         <h1>PASCASARJANA</h1>
+        <img src="\static\img\logo_pascasarjana.png" height="320px">
+        
     </center>
+</body>
+
+<body>
+    
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Sejarah</h2>
+    <p align ="justify"> Pada tahun 2012 Organisasi dan Tatakerja (OTK) Untirta mengalami perubahan sesuai dengan Peraturan Menteri Pendidikan dan Kebudayaan nomor 29 tahun 2012, Pascasarjana Untirta sudah masuk dalam Organisasi dan Tata Kerja Universitas Sultan Ageng Tirtayasa Hal ini berdampak positif karena Pascasarjana dapat mengembangkan diri sesuai dengan kebutuhan masyarakat dengan dukungan anggaran dari pemerintah. </p>
+    <p align ="justify">Tuntutan masyarakat mendorong Pascasarjana Untirta agar membuka program studi lain sesuai dengan kebutuhan. Pada tahun 2009 Pascasarjana Untirta mengajukan Proram Studi Magister Ilmu Hukum dan Magister Administrasi Publik. Pada tahun 2010 keluar ijin pertimbangan Dikti untuk Program Studi Ilmu hukum dengan nomor 3327.20/D2.2/2010 dan ijin operasional dengan Nomor 158/E/O/2013. Pada tahun 2014, Pascasarjana Unita diberi mandat untuk menyelenggarakan Program Studi Magister 
+        Administrasi Publik dan Program Studi Ilmu Adminstrasi melalui Surat Dirjen DIKTI Kementerian Pendidikan dan Kebudayaan nomor 343/E. E2/K1/2014 tentang Mandat penyelenggaraan program studi pada Universitas Sultan Ageng Tirtayasa Sumber daya Manusia Untirta semakin bertambah, kualifikasi dosen lulusan S-3, semakin mewarnai berbagai program studi. Pembukaan program studi untuk jenjang magister semakin jadi tantangan. Tantangan ini terus diubah menjadi peluang. Pada tahun 2014 Untirta mendapatkan ijin pertimbangan nomor 710/E2.2/KL/2014 untuk Program Studi Magister Manajemen dan nomor 815/E2.2/KL/2014 untuk Program Studi Akutansi. Tahun 2014 ini juga beberapa Program Studi lain siap mengajukan pembukaan program studi S-2.</p>
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Visi Dan Misi</h2>
+        <h3 align ="center">Visi</h3>
+        <h3 align ="center"> Pada tahun 2025, Menjadi Pascasarjana yang maju bermutu, berdaya saing dan kebersamaan mencapai tujuan</h3>
+        <h3 align ="center">Misi</h3>
+        <p align="center">1. Menyelenggarakan pengembangan Tri Dharma perguruan tinggi yang terbaik dan relevan dengan kebutuhan masyarakat sekarang dan mendatang</p>
+        <p align="center">2. Menjalin kerjasama dengan pihak-pihak terkait baik didalam maupun diluar kampus</p>
+        <p align="center">3. Membangun dan mengembangkan sistem manajeman mutu menuju efektivitas dan efisiensi</p>
+       
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Program Studi</h2>
+
+
+</body>
+
+<style>
+    body {
+      background-image: linear-gradient(to right, #2cb4b1, #224f96);
+      margin-left: 50px;
+      margin-right: 50px;
+      padding: 0;
+  }
+  
+  nav {
+      top: 0;
+      left: 0;
+      position: fixed;
+      height: 80px;
+      width: 100%;
+      box-sizing: border-box;
+      background: rgba(0, 0, 0, 0.5);
+      border-bottom: 1px solid white;
+  }
+  
+  .logo {
+      float: left;
+      height: 10px;
+      font-size: 36px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      padding: 20px 20px;
+      justify-content: space-around;
+  }
+  
+  nav ul {
+      margin: 0;
+      padding: 0;
+      float: right;
+      list-style: none;
+      display: flex;
+  }
+  
+  nav ul li a {
+      font-size: 15px;
+      font-weight: bold;
+      color: white;
+      line-height: 80px;
+      text-decoration: none;
+      padding: 12px 30px;
+  }
+  nav ul li a:hover {
+border-radius: 10px;
+background: rgba(0, 0, 0, 0.8);
+}
+</style>
     
     <h2>Daftar Prodi :</h2>
     
