--- a/profil/templates/indexprofil.html
+++ b/profil/templates/indexprofil.html
@@ -4,14 +4,69 @@
 
     <center>
         <h1>PROFIL</h1>
+        <img src="\static\img\foto_nurul.png" height="500px">
     </center>
     
+    
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Data Diri</h2>
     <colour : blue></colour>
+    <img src="\static\img\nurul.jpg" height="120px">
+    <p style="font-family: 'times new roman'">Nama : Nurul Khofifah Ramadhani</p>
+    <p style="font-family: 'times new roman'">Kelas : 3A</p>
+    <p style="font-family: 'times new roman'">Nim : 2225210073</p>
+    <p style="font-family: 'times new roman'">Jurusan : Pendidikan Matematika</p>
+   
 
-    <h2>Nama : Nurul Khofifah Ramadhani</h2>
-    <h3>Kelas : 3A</h3>
-    <h4>Nim : 2225210073</h4>
-
-
+  <style>
+        body {
+          background-image: linear-gradient(to right, #2cb4b1, #224f96);
+          margin-left: 50px;
+          margin-right: 50px;
+          padding: 0;
+      }
+      
+      nav {
+          top: 0;
+          left: 0;
+          position: fixed;
+          height: 80px;
+          width: 100%;
+          box-sizing: border-box;
+          background: rgba(0, 0, 0, 0.5);
+          border-bottom: 1px solid white;
+      }
+      
+      .logo {
+          float: left;
+          height: 10px;
+          font-size: 36px;
+          font-weight: bold;
+          text-transform: uppercase;
+          color: white;
+          padding: 20px 20px;
+          justify-content: space-around;
+      }
+      
+      nav ul {
+          margin: 0;
+          padding: 0;
+          float: right;
+          list-style: none;
+          display: flex;
+      }
+      
+      nav ul li a {
+          font-size: 15px;
+          font-weight: bold;
+          color: white;
+          line-height: 80px;
+          text-decoration: none;
+          padding: 12px 30px;
+      }
+      nav ul li a:hover {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.8);
+}
+</style>
 
 {% endblock %}
