--- a/fkip/templates/indexfkip.html
+++ b/fkip/templates/indexfkip.html
@@ -1,10 +1,93 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+<body>
 
     <center>
         <h1>FAKULTAS KEGURUAN DAN ILMU PENDIDIKAN</h1>
+        <img src="\static\img\logo_fkip.png" height="320px">
+        
     </center>
+</body>
+
+<body>
+    
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Sejarah</h2>
+    <p align ="justify"> Pada awal berdiri, Fakultas Keguruan dan Ilmu Pendidikan bermula dari STKIP dimana kegiatan perkuliahan dimulai pada 1 oktober 1982, yang terdiri dari 2 Prodi yaitu, Prodi IPPS-Pls dan Administrasi Pendidikan dengan jenjang pendidikan Sarjana (S.1). Program studi Pendidikan Luar Sekolah (PLS) berlokasi di Serang, dan Program Studi Administrasi Pendidikan di Pandeglang. Program Studi Administrasi Pendidikan mengalami fisingout oleh pemerintah, sehingga sejak tahun 1987 sampai dengan sekarang tidak menerima mahasiswa baru lagi. Pada masa menjelang passing out tersebut tercetus ide bersama untuk mengganti program studi dan berdirilah Program Studi Bahasa dan Sastra Indonesia pada tahun 1986. Karena ada beberapa kendala untuk mengurus status akreditasinya, maka Program Studi Diksatrasia bermerger dengan STKIP Galuh Ciamis. Sesuai dengan dinamika yang terjadi Program Studi Diksatrasia pada tahun 1990 beralih lokasi Operasional perkuliahan dari Pandeglang ke Serang sampai dengan sekarang. Baru pada tahun 1994 Prodi Diksatrasia memperoleh status terdaftar dengan surat keputusan Mendikbud RI nomor: 226/DIKTI/KEP/1992.</p>
+    <p align ="justify"> Fakultas Keguruan dan Ilmu Pendidikan menerima amanah penyelenggaraan Jurusan baru melalui surat Dirjen Dikti Kemdikbud Republik Indonesia Nomor : 343/E.E2/2014, tanggal 11 April 2014, yakni Jurusan: Bimbingan dan Konseling, Pendidikan Luar Biasa, Pendidikan Sendratasik, Pendidikan Fisika, Pendidikan Kimia, Pendidiksn IPA, Pendidikan Teknik Elektro, Pendidikan Teknik Mesin, Pendidikan Kewarganegaraan, Pendidikan Sejarah, Pendidikan Sosiologi. Dengan demikian, sampai dengan tahun 2014, Fakultas Keguruan dan Ilmu Pendidikan telah memiliki 18 (delapan belas) jurusan, yaitu : Jurusan Pendidikan Luar Sekolah (PLS), Jurusan Pendidikan Guru Sekolah Dasar (PGSD), Jurusan Pendidikan Anak Usia Dini (PG PAUD), Jurusan Pendidikan Bahasa dan Sastra Indonesia (Dikstrasia), Jurusan Pendidikan Bahasa Inggris, Jurusan Pendidikan Matematika, Jurusan Pendidikan Biologi, Jurusan Studi Pendidikan Bimbingan dan Konseling, Jurusan Pendidikan Luar Biasa (PLB), Jurusan Pendidikan Sendratasik, Jurusan Pendidikan Kewarganegaraan (PKn), Jurusan Pendidikan Sejarah, Jurusan Pendidikan Sosiologi, Jurusan Pendidikan Fisika, Jurusan Pendidikan Kimia, Jurusan Pendidikan IPA, Jurusan Pendidikan Teknik Elektro dan Jurusan Pendidikan Teknik Mesin.
+            Serta pada tahun tahun 2018 menerima amanah penyelenggaraan Program Pendidikan Profesi Guru melalui Keputusan Menteri Riset, Teknologi, dan Pendidikan Tinggi Republik Indonesi Nomor : 990/KPT/I/2018, tanggal 9 November 2018 yakni bidang studi : Fisika, Kimia, Bahasa Indonesia, Bahasa Inggris, Biologi, Matematika dan Guru Sekolah Dasar.</p>
+    <h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Visi Dan Misi</h2>
+    <center>
+        <img src="\static\img\Gedung_fkip.png" height="250px">
+    </center>
+    <h3 align ="center">Visi</h3>
+    <h3 align ="center">“Mewujudkan FKIP sebagai fakultas yang Unggul dalam bidang pendidikan, Berkarakter dan Berdaya Saing di Tingkat Nasional dan Kawasan ASEAN Tahun 2030”</h3>
+    <h3 align ="center">Misi</h3>
+    <p align="center"> Berdasarkan visi sebagaimana dituangkan di atas, kemudian dijabarkan ke dalam misi Fakultas Keguruan dan Ilmu Pendidikan sebagai berikut:</h3>
+    <p align="center">
+        1. Meningkatkan kualitas sumber daya dosen, tenaga kependidikan, mahasiswa dan alumni yang unggul berkarakter, dan berdaya saing di kawasan ASEAN</p>
+    <p align="center">2. Meningkatkan kualitas pengajaran yang inovatif, penelitian dan pengabdian pada masyarakat dalam bidang pendidikan.</p>
+    <p align="center">3. Meningkatkan kualitas tata kelola fakultas yang akuntabel, transparan dan profesional</p>
+    <p align="center">4. Pengembangan sarana dan prasarana kampus yang ilmiah berbasis teknologi informasi</p>
+
+
+<h2 style="background-color: rgba(52, 60, 57, 0.568) ;">Program Studi</h2>
+
+
+</body>
+
+
+<style>
+    body {
+      background-image: linear-gradient(to right, #2cb4b1, #224f96);
+      margin-left: 50px;
+      margin-right: 50px;
+      padding: 0;
+  }
+  
+  nav {
+      top: 0;
+      left: 0;
+      position: fixed;
+      height: 80px;
+      width: 100%;
+      box-sizing: border-box;
+      background: rgba(0, 0, 0, 0.5);
+      border-bottom: 1px solid white;
+  }
+  
+  .logo {
+      float: left;
+      height: 10px;
+      font-size: 36px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      padding: 20px 20px;
+      justify-content: space-around;
+  }
+  
+  nav ul {
+      margin: 0;
+      padding: 0;
+      float: right;
+      list-style: none;
+      display: flex;
+  }
+  
+  nav ul li a {
+      font-size: 15px;
+      font-weight: bold;
+      color: white;
+      line-height: 80px;
+      text-decoration: none;
+      padding: 12px 30px;
+  }
+  nav ul li a:hover {
+border-radius: 10px;
+background: rgba(0, 0, 0, 0.8);
+}
+</style>
     
     <h2>Daftar Prodi :</h2>
     
